Renamed person to user, few dto fixings